# AOC2024

./: .gitignore  Cargo.toml  renovate.json
.git-crypt/keys/default/0/: 42BCDE0511E25D9F143D36D09B827283FC800214.gpg  8352C7A1F9720EB86956530A50449F39C059B4F4.gpg
input/2024/: day1.txt  day10.txt  day11.txt  day2.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  template.rs
