[package]
name = "aoc2023"
version = "0.1.0"

[profile.release]
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
log = "^0"
env_logger = "^0"
test-log = "^0"
regex = "1.10.2"
lazy_static = "1.4.0"
itertools = "0.10.5"
anyhow = "1.0.75"
rayon = "1.8.0"
