[package]
name = "aoc2024"
version = "0.1.0"

[profile.release]
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
log = "^0"
env_logger = "^0"
test-log = "^0"
regex = "1.10.2"
lazy_static = "1.4.0"
itertools = "0.13.0"
anyhow = "1.0.75"
rayon = "1.8.0"
colored = "2.0.4"
cached = "0.54.0"
